--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -9,8 +9,7 @@
 				Yunchao Wei 魏云超
 			</h3>
 			<p>
-			 I am currently a Postdoc Researcher in Prof. <a href="https://www.ece.illinois.edu/directory/profile/t-huang1">Thomas Huang</a>'s <a href="http://ifp-uiuc.github.io/">Image Formation and Professing (IFP)</a> group at Beckman Institute, University of Illinois Urbana-Champaign (UIUC). I received PhD from Beijing Jiaotong University, advised by <a href="http://mepro.bjtu.edu.cn/zhaoyao/e_index.htm">Zhao Yao</a>. I was a Visiting Scholar from Nov. 2013 to Nov.2015 in the Learning and Vision (LV) Research Group of the National University of Singapore (NUS), working with Prof. <a href="https://www.ece.nus.edu.sg/stfpage/eleyans/">Shuicheng	Yan</a>. I was a Postdoc Researcher from July 2016 to Sept.2017 in the LV Research Group of NUS, working with Prof. <a href="https://sites.google.com/site/jshfeng/">Jiashi Feng</a>
-			 My research areas are computer vision, multimedia and deep learning. I am interested in multi-modal data analysis, multi-label classification, object detection and image semantic segmentation.
+			 I am currently a Postdoc Researcher in Prof. <a href="https://www.ece.illinois.edu/directory/profile/t-huang1">Thomas Huang</a>'s <a href="http://ifp-uiuc.github.io/">Image Formation and Professing (IFP)</a> group at Beckman Institute, University of Illinois Urbana-Champaign (UIUC). I received PhD from Beijing Jiaotong University, advised by <a href="http://mepro.bjtu.edu.cn/zhaoyao/e_index.htm">Zhao Yao</a>. I was a Visiting Student from Nov. 2013 to Nov. 2015 in the Learning and Vision (LV) Research Group of the National University of Singapore (NUS), working with Prof. <a href="https://www.ece.nus.edu.sg/stfpage/eleyans/">Shuicheng	Yan</a>. I was a Postdoc Researcher from July 2016 to Sept.2017 in the LV Research Group of NUS, working with Prof. <a href="https://sites.google.com/site/jshfeng/">Jiashi Feng</a>.
 			</p>
 			 
 			<h3 style="padding-top:-5px"></h3> 
