--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -9,6 +9,16 @@
 <div class="media">
   <div class="media-body">
     <p class="media-heading">
+      <strong>Horizontal Pyramid Matching for Person Re-identification</strong><br />
+      Yang Fu, <strong>Yunchao Wei</strong>, Yuqian Zhou, Honghui Shi, Gao Huang, Xinchao Wang, Zhiqiang Yao, Thomas Huang<br />
+      <a href="https://arxiv.org/abs/1804.05275">[arxiv]</a>
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
       <strong>Revisiting RCNN: On Awakening the Classification Power of Faster RCNN</strong><br />
        Bowen Cheng, <strong>Yunchao Wei</strong>, Honghui Shi, Rogerio Feris, Jinjun Xiong, Thomas Huang<br />
       <a href="https://arxiv.org/abs/1803.06799">[arxiv]</a>
