--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -55,9 +55,10 @@
 <div class="media">
   <div class="media-body">
     <p class="media-heading">
-      <strong>Revisiting Dilated Convolution: A Simple Approach for Weakly- and SemiSupervised Semantic Segmentation</strong><br />
+      <strong>Revisiting Dilated Convolution: A Simple Approach for Weakly- and Semi- Supervised Semantic Segmentation</strong><br />
        <strong>Yunchao Wei</strong>, Huaxin Xiao, Honghui Shi, Zequn Jie, Jiashi Feng, Thomas Huang<br />
       IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2018 (<strong>spotlight</strong>)<br />
+			<a href="https://arxiv.org/abs/1805.04574">[PDF]</a>
    </p>
   </div>
 </div>
@@ -68,6 +69,7 @@
       <strong>Adversarial Complementary Learning for Weakly Supervised Object Localization</strong><br />
        Xiaolin Zhang, <strong>*Yunchao Wei</strong>, Jiashi Feng, Yi Yang, Thomas Huang<br />
       IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2018<br />
+			<a href="https://arxiv.org/abs/1804.06962">[PDF]</a>
    </p>
   </div>
 </div>
