--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -13,7 +13,7 @@
       Ting Liu, Tao Ruan, Zilong Huang, <strong>Yunchao Wei</strong>, Shikui Wei, Yao Zhao, Thomas Huang<br />
       <a href="https://arxiv.org/pdf/1809.05996">[arxiv]</a>
 			<a href="https://github.com/liutinglt/CE2P">[CODE]</a><br />
-			<strong>Note:</strong><h1 style="color:#FF0000;">This work achieves the 1st places on all human paring tracks in the 2nd LIP Challenge</h1>
+			<strong>Note:</strong><a style="color:#FF0000;">This work achieves the 1st places on all human paring tracks in the 2nd LIP Challenge</a>
     </p>
   </div>
 </div>
